RESOLVED FIXED48401
[Qt] Type mismatch while serializing/deserializing message id size
https://bugs.webkit.org/show_bug.cgi?id=48401
Summary [Qt] Type mismatch while serializing/deserializing message id size
Kimmo Kinnunen
Reported 2010-10-27 00:14:42 PDT
In WebKit2/Platform/CoreIPC/qt/ConnectionQt.cpp, size of the sent buffer is calculated in two ways: 1) sizeof(uint32_t) when writing 2) sizeof(MessageId) when reading This doesn't cause problems at the moment, but might cause them later (or on some obscure compilers).
Attachments
use same type for sizeof() while reading and writing (1.65 KB, patch)
2010-10-27 00:19 PDT, Kimmo Kinnunen
no flags
Kimmo Kinnunen
Comment 1 2010-10-27 00:19:49 PDT
Created attachment 71993 [details] use same type for sizeof() while reading and writing
Andreas Kling
Comment 2 2010-10-27 02:59:51 PDT
Comment on attachment 71993 [details] use same type for sizeof() while reading and writing LGTM.
WebKit Commit Bot
Comment 3 2010-10-27 04:48:34 PDT
Comment on attachment 71993 [details] use same type for sizeof() while reading and writing Clearing flags on attachment: 71993 Committed r70635: <http://trac.webkit.org/changeset/70635>
WebKit Commit Bot
Comment 4 2010-10-27 04:48:39 PDT
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 5 2010-10-27 14:03:09 PDT
http://trac.webkit.org/changeset/70635 might have broken GTK Linux 32-bit Release
Note You need to log in before you can comment on or make changes to this bug.